--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,8 +17,15 @@
     "mysql2": "^3.2.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/eslint": "^8.37.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
+    "@types/prettier": "^2.7.2",
     "eslint": "^8.38.0",
     "nodemon": "^2.0.22",
-    "prettier": "^2.8.7"
+    "prettier": "^2.8.7",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.4"
   }
 }
